package jp.sgk.businesstrip.domain.common


class Location(val name: String, val address: String){
    val id: Long = 0
}
