package jp.sgk.businesstrip.domain.employee

enum class Capacity(val cap: Int) {
    J(1),
    S(2),
    M(3)
}