package jp.sgk.businesstrip.domain.employee

class Commute(val minute: Int)