package jp.sgk.businesstrip.domain.employee

class Name(val name: String)